--- a/templates/base.html
+++ b/templates/base.html
@@ -41,16 +41,28 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/">Bootstrap</a>
+          <a class="brand" href="/">Hub Medico</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="/">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li class="active"><a href="/">Perfil</a></li>
+              <li><a href="#about">Mensajes</a></li>
+              <li><a href="#contact">Alertas</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
       </div>
+    </div>
+
+    <div class="container marketing">
+     <div class="row">
+        <div class="span4">
+        <img class="img-circle" src="{{MEDIA_URL}}images/slider2.png">
+          <h2>Hola Juan David</h2>
+          <p>Completa tu perfil</p>
+   
+        </div><!-- /.span4 -->
+      </div><!-- /.row -->
+
     </div>
 
     <div id="messages">
