--- a/templates/inicio/index.html
+++ b/templates/inicio/index.html
@@ -260,7 +260,7 @@
     <![endif]-->
 
     <!-- Fav and touch icons -->
-   <link rel="shortcut icon" href="{{MEDIA_URL}}images/registro_menu.png">
+   <link rel="shortcut icon" href="{{MEDIA_URL}}images/reo_menu.png">
   </head>
 
   <body>
