--- a/templates/inicio/board.html
+++ b/templates/inicio/board.html
@@ -12,7 +12,7 @@
     <link href="{{STATIC_URL}}css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="{{STATIC_URL}}css/sb-admin.css" rel="stylesheet">
+    <link href="{{STATIC_URL}}css/sb_admin.css" rel="stylesheet">
     <link rel="stylesheet" href="{{STATIC_URL}}font-awesome/css/font-awesome.min.css">
     <!-- Page Specific CSS -->
     <link rel="stylesheet" href="http://cdn.oesmith.co.uk/morris-0.4.3.min.css">
