--- a/templates/inicio/index.html
+++ b/templates/inicio/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,8 +8,8 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="{{STATIC_URL}}css/bootstrap.css" rel="stylesheet">
-    <link href="{{STATIC_URL}}css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/2.3.2/assets/css/bootstrap-responsive.css" rel="stylesheet">
     <style>
 
     /* GLOBAL STYLES
@@ -285,8 +284,8 @@
             <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
             <div class="nav-collapse collapse">
               <ul class="nav">
-                <li><a href="/cuentas/registro">Regístrese</a></li>
-                <li><a href="/cuentas/login">Entrar</a></li>
+                <li><a href="/cuentas/registro/">Regístrese</a></li>
+                <li><a href="/cuentas/login/">Entrar</a></li>
            
                 <!-- Read about Bootstrap dropdowns at http://twbs.github.com/bootstrap/javascript.html#dropdowns -->
              
@@ -332,22 +331,22 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="span4">
-        <img class="img-circle" src="{{MEDIA_URL}}images/avatar1_registro_responsive.png">
-          <h2>Beneficios</h2>
-          <p>Su plataforma de Relacionamiento en Salud, para que esté a un clic de sus pacientes</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <img class="img-circle" src="{{MEDIA_URL}}images/avatar1_registro_responsive.png">
+          <h2>Texto</h2>
+          <p>Texto aquí....</p>
+          <p><a class="btn" href="#">Ver Detalles &raquo;</a></p>
         </div><!-- /.span4 -->
         <div class="span4">
-         <img class="img-circle" src="{{MEDIA_URL}}images/avatar1_registro_responsive.png">
-          <h2>Ventajas</h2>
-          <p>Ofrece tus servicios de consulta online</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <img class="img-circle" src="{{MEDIA_URL}}images/avatar1_registro_responsive.png">>
+          <h2>Texto</h2>
+          <p>Texto aquí...</p>
+          <p><a class="btn" href="#">Ver Detalles &raquo;</a></p>
         </div><!-- /.span4 -->
         <div class="span4">
-        <img class="img-circle" src="{{MEDIA_URL}}images/avatar1_registro_responsive.png">
-          <h2>Empieza Ya</h2>
-          <p>Regístrae gratis y empieza a utilizar nuestros servicios.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <img class="img-circle" src="{{MEDIA_URL}}images/avatar1_registro_responsive.png">>
+          <h2>Texto</h2>
+          <p>Texto aquí...</p>
+          <p><a class="btn" href="#">Ver Detalles &raquo;</a></p>
         </div><!-- /.span4 -->
       </div><!-- /.row -->
 
@@ -357,18 +356,10 @@
       <hr class="featurette-divider">
 
       <div class="featurette">
-        <img class="featurette-image pull-right" src="{{MEDIA_URL}}images/slider1.png">
-        <h2 class="featurette-heading">Hub Medico. <span class="muted">Regístrate gratis.</span></h2>
-        <p class="lead">Utiliza todo el poder del internet para conectar con tus pacientes.</p>
+        <img class="featurette-image pull-right" src="{{MEDIA_URL}}images/slider2.png">
+        <h2 class="featurette-heading">Texto Aquí <span class="muted">Texto aquí.</span></h2>
+        <p class="lead">Texto aquí.</p>
       </div>
-
-      <hr class="featurette-divider">
-
-      
-
-      <hr class="featurette-divider">
-
-      
 
       <hr class="featurette-divider">
 
@@ -377,8 +368,8 @@
 
       <!-- FOOTER -->
       <footer>
-        <p class="pull-right"><a href="/admin/">Panel Administración</a></p>
-        <p>&copy; 2014 Hub Medico, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terminos</a></p>
+        <p class="pull-right"><a href="/admin/">Admin</a></p>
+        <p>&copy; 2014 Hub Médico, Inc. &middot; <a href="#">Privacidad</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
     </div><!-- /.container -->
