--- a/templates/inicio/blank-page.html
+++ b/templates/inicio/blank-page.html
@@ -9,11 +9,11 @@
     <title>Blank Page - SB Admin</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../estaticos/css/bootstrap.css" rel="stylesheet">
+    <link href="{{STATIC_URL}}css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="../estaticos/css/sb-admin.css" rel="stylesheet">
-    <link rel="stylesheet" href="../estaticos/font-awesome/css/font-awesome.min.css">
+    <link href="{{STATIC_URL}}css/sb-admin.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{STATIC_URL}}font-awesome/css/font-awesome.min.css">
   </head>
 
   <body>
@@ -134,8 +134,8 @@
     </div><!-- /#wrapper -->
 
     <!-- JavaScript -->
-    <script src="../estaticos/js/jquery-1.10.2.js"></script>
-    <script src="../estaticos/js/bootstrap.js"></script>
+    <script src="{{STATIC_URL}}js/jquery-1.10.2.js"></script>
+    <script src="{{STATIC_URL}}js/bootstrap.js"></script>
 
   </body>
 </html>
