--- a/templates/inicio/base.html
+++ b/templates/inicio/base.html
@@ -63,7 +63,7 @@
                       {% else %}
                       {% endif %}
           <p>Completa tu perfil</p>
-   
+           <a href="/cerrar/"></a>
         </div><!-- /.span4 -->
       </div><!-- /.row -->
 
