--- a/templates/inicio/base.html
+++ b/templates/inicio/base.html
@@ -63,7 +63,8 @@
                       {% else %}
                       {% endif %}
           <p>Completa tu perfil</p>
-           <a href="/cerrar/"></a>
+           <a href="/cerrar/">Cerrar</a>
+            <a href="/home/blank/">Blank</a>
         </div><!-- /.span4 -->
       </div><!-- /.row -->
 
