--- a/templates/inicio/base.html
+++ b/templates/inicio/base.html
@@ -63,8 +63,14 @@
                       {% else %}
                       {% endif %}
           <p>Completa tu perfil</p>
-           <a href="/cerrar/">Cerrar</a>
+            <a href="/home/board/">Board</a>
             <a href="/home/blank/">Blank</a>
+            <a href="/home/bootsgrid/">Boots-grid</a>
+            <a href="/home/bootselements/">Boots-elements</a>
+            <a href="/home/charts/">Charts</a>
+            <a href="/home/formularios/">Formularios</a>
+            <a href="/home/tables/">Tablas</a>
+            <a href="/home/tipografia/">Tipografa</a>
         </div><!-- /.span4 -->
       </div><!-- /.row -->
 
