actualización admin médicos

--- a/estaticos/css/customize-template.css
+++ b/estaticos/css/customize-template.css
@@ -6139,7 +6139,7 @@ ul.icons li .icon-large:before {
   content: "\f06b";
 }
 .icon-leaf:before {
-  content: "\f06c";
+  content: "";
 }
 .icon-fire:before {
   content: "\f06d";
@@ -6439,7 +6439,7 @@ ul.icons li .icon-large:before {
   content: "\f0e3";
 }
 .icon-dashboard:before {
-  content: "\f0e4";
+  content: "\f0f0";
 }
 .icon-comment-alt:before {
   content: "\f0e5";
@@ -6461,6 +6461,9 @@ ul.icons li .icon-large:before {
 }
 .icon-user-md:before {
   content: "\f200";
+}
+.icon-users:before {
+  content: "\f0c0";
 }
 /* @group Base */
 .chzn-container {
