--- a/templates/inicio/board.html
+++ b/templates/inicio/board.html
@@ -46,7 +46,7 @@
                         </ul>
                         <ul class="nav pull-right">
                             <li>
-                                <a href="login.html">Salir</a>
+                                <a href="/">Salir</a>
                             </li>
                             
                         </ul>
