--- a/templates/inicio/base.html
+++ b/templates/inicio/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap | {% block title %}Untitled{% endblock %}</title>
+    <title>Hub Pacientes | {% block title %}Untitled{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -44,9 +44,7 @@
           <a class="brand" href="/">Hub Medico</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="/">Perfil</a></li>
-              <li><a href="#about">Mensajes</a></li>
-              <li><a href="#contact">Alertas</a></li>
+              <li><a href="/">salir</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -57,20 +55,10 @@
      <div class="row">
         <div class="span4">
         <img class="img-circle" src="{{MEDIA_URL}}images/slider2.png">
-          <h2> {% if user.is_authenticated %}
-                      Bienvenido {{user.first_name}}
-                      <a href="/">Salir</a></h2>
-                      {% else %}
-                      {% endif %}
-          <p>Completa tu perfil</p>
-            <a href="/home/board/">Board</a>
-            <a href="/home/blank/">Blank</a>
-            <a href="/home/bootsgrid/">Boots-grid</a>
-            <a href="/home/bootselements/">Boots-elements</a>
-            <a href="/home/charts/">Charts</a>
-            <a href="/home/formularios/">Formularios</a>
-            <a href="/home/tables/">Tablas</a>
-            <a href="/home/tipografia/">Tipografa</a>
+         <h1>Hub Pacientes</h1>
+      <p>Próximamente podrás conectarte en línea con tu médico y hacer uso de todas los servicios de Hub Pacientes.</p>
+         
+           
         </div><!-- /.span4 -->
       </div><!-- /.row -->
 
