--- a/templates/inicio/index.html
+++ b/templates/inicio/index.html
@@ -285,7 +285,12 @@
             <div class="nav-collapse collapse">
               <ul class="nav">
                 <li><a href="/cuentas/registro/">Regístrese</a></li>
-                <li><a href="/cuentas/login/">Entrar</a></li>
+                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Entrar <b class="caret"></b></a>
+                 <ul class="dropdown-menu">
+                 <li><a href="/cuentas/login/">Médicos</a></li>
+                    <li><a href="/pacientes/">Pacientes</a></li>
+                 </ul>
+                 </li>
            
                 <!-- Read about Bootstrap dropdowns at http://twbs.github.com/bootstrap/javascript.html#dropdowns -->
              
@@ -337,13 +342,13 @@
           <p><a class="btn" href="#">Ver Detalles &raquo;</a></p>
         </div><!-- /.span4 -->
         <div class="span4">
-          <img class="img-circle" src="{{MEDIA_URL}}images/avatar1_registro_responsive.png">>
+          <img class="img-circle" src="{{MEDIA_URL}}images/avatar1_registro_responsive.png">
           <h2>Texto</h2>
           <p>Texto aquí...</p>
           <p><a class="btn" href="#">Ver Detalles &raquo;</a></p>
         </div><!-- /.span4 -->
         <div class="span4">
-          <img class="img-circle" src="{{MEDIA_URL}}images/avatar1_registro_responsive.png">>
+          <img class="img-circle" src="{{MEDIA_URL}}images/avatar1_registro_responsive.png">
           <h2>Texto</h2>
           <p>Texto aquí...</p>
           <p><a class="btn" href="#">Ver Detalles &raquo;</a></p>
