--- a/templates/inicio/base.html
+++ b/templates/inicio/base.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/">Hub Medico</a>
+          <a class="brand" href="/">Hub Pacientes</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="/">salir</a></li>
