--- a/templates/inicio/index.html
+++ b/templates/inicio/index.html
@@ -284,7 +284,7 @@
             <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
             <div class="nav-collapse collapse">
               <ul class="nav">
-                <li><a href="/cuentas/registro/">Regístrese</a></li>
+                <li><a href="/cuentas/register/">Regístrese</a></li>
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Entrar <b class="caret"></b></a>
                  <ul class="dropdown-menu">
                  <li><a href="/cuentas/login/">Médicos</a></li>
