--- a/templates/inicio/board.html
+++ b/templates/inicio/board.html
@@ -46,7 +46,7 @@
                         </ul>
                         <ul class="nav pull-right">
                             <li>
-                                <a href="/">Salir</a>
+                                <a href="/cuentas/logout/">Salir</a>
                             </li>
                             
                         </ul>
@@ -117,7 +117,7 @@
 
         <footer class="application-footer">
             <div class="container">
-                <p>Hub Médico © 2014</p>
+                <p> Powered by Digitalsmark Latinoamérica | Copyright © 2002 - 2014</p>
                 <div class="disclaimer">
                     <p>Términos de uso</p>
                     <p>Políticas de privacidad</p>
