--- a/templates/inicio/panelpal.html
+++ b/templates/inicio/panelpal.html
@@ -3,9 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{% block title %}
-        
-    {% endblock title %}</title>
+    <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <meta name="layout" content="main"/>
