--- a/templates/inicio/index.html
+++ b/templates/inicio/index.html
@@ -285,14 +285,14 @@
             <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
             <div class="nav-collapse collapse">
               <ul class="nav">
-                <li><a href="/cuentas/register/" target="_blank">Regístrese</a></li>
+                <li><a href="/registrarse/" target="_blank">Regístrese</a></li>
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Entrar <b class="caret"></b></a>
                  <ul class="dropdown-menu">
-                 <li><a href="/cuentas/login/" target="blank">Médicos</a></li>
+                 <li><a href="/login/" target="blank">Médicos</a></li>
                     <li><a href="/pacientes/" target="blank">Pacientes</a></li>
                  </ul>
                  </li>
-                 <li><a href="/cuentas/blog/">Blog</a></li>
+                 <li><a href="/blog/">Blog</a></li>
            
                 <!-- Read about Bootstrap dropdowns at http://twbs.github.com/bootstrap/javascript.html#dropdowns -->
              
@@ -350,7 +350,7 @@
           <img class="img-circle" src="{{MEDIA_URL}}images/hubmedico.png">
           <h2>A un Click de tu Paciente</h2>
           <p>Soy Médico</p>
-          <p><a class="btn" href="/cuentas/login/" target="blank">Entrar &raquo;</a></p>
+          <p><a class="btn" href="/login/" target="blank">Entrar &raquo;</a></p>
         </div><!-- /.span4 -->
          <div class="span4">
           <img class="img-circle" src="{{MEDIA_URL}}images/fot1perfil.png">
