--- a/templates/registro/success.html
+++ b/templates/registro/success.html
@@ -114,7 +114,7 @@
         <p class="lead">Para hacer uso de los servicios que ofrece nuestra plataforma, debes ingresar a la cuenta de tu correo y confirmar el registro a través del email que te hemos enviado.
        <div class="container">
             <h4>¡Gracias por registrarte!</span></h4>
-         <a href="{% url 'login' %}">ENTRAR</a> 
+         <a href="/login/">ENTRAR</a> 
             
         </div>
       </div>
