--- a/templates/inicio/board.html
+++ b/templates/inicio/board.html
@@ -48,7 +48,7 @@
                         </ul>
                         <ul class="nav pull-right">
                             <li>
-                                <a href="/cuentas/logout/">Salir</a>
+                                <a href="/logout/">Salir</a>
                             </li>
                             
                         </ul>
