--- a/templates/base.html
+++ b/templates/base.html
@@ -1,260 +1,55 @@
-	<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}
-      
+    <title>Hub Salud|{% block title %}
+        
     {% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css" rel="stylesheet">
-    <link href="http://getbootstrap.com/2.3.2/assets/css/bootstrap-responsive.css" rel="stylesheet">
-     <link href="{{STATIC_URL}}css/customize-template.css" type="text/css" media="screen, projection" rel="stylesheet" />
-    <style>
-
-    /* GLOBAL STYLES
-    -------------------------------------------------- */
-    /* Padding below the footer and lighter body text */
-
-    body {
-      padding-bottom: 40px;
-      color: #5a5a5a;
-    }
-
-
-
-    /* CUSTOMIZE THE NAVBAR
-    -------------------------------------------------- */
-
-    /* Special class on .container surrounding .navbar, used for positioning it into place. */
-    .navbar-wrapper {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      z-index: 10;
-      margin-top: 20px;
-      margin-bottom: -90px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
-    }
-    .navbar-wrapper .navbar {
-
-    }
-
-    /* Remove border and change up box shadow for more contrast */
-    .navbar .navbar-inner {
-      border: 0;
-      -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
-         -moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
-              box-shadow: 0 2px 10px rgba(0,0,0,.25);
-    }
-
-    /* Downsize the brand/project name a bit */
-    .navbar .brand {
-      padding: 14px 20px 16px; /* Increase vertical padding to match navbar links */
-      font-size: 16px;
-      font-weight: bold;
-      text-shadow: 0 -1px 0 rgba(0,0,0,.5);
-    }
-
-    /* Navbar links: increase padding for taller navbar */
-    .navbar .nav > li > a {
-      padding: 15px 20px;
-    }
-
-    /* Offset the responsive button for proper vertical alignment */
-    .navbar .btn-navbar {
-      margin-top: 10px;
-    }
-
-
-
-    /* CUSTOMIZE THE CAROUSEL
-    -------------------------------------------------- */
-
-    /* Carousel base class */
-    .carousel {
-      margin-bottom: 60px;
-    }
-
-    .carousel .container {
-      position: relative;
-      z-index: 9;
-    }
-
-    .carousel-control {
-      height: 80px;
-      margin-top: 0;
-      font-size: 120px;
-      text-shadow: 0 1px 1px rgba(0,0,0,.4);
-      background-color: transparent;
-      border: 0;
-      z-index: 10;
-    }
-
-    .carousel .item {
-      height: 500px;
-    }
-    .carousel img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      min-width: 100%;
-      height: 500px;
-    }
-
-    .carousel-caption {
-      background-color: transparent;
-      position: static;
-      max-width: 550px;
-      padding: 0 20px;
-      margin-top: 200px;
-    }
-    .carousel-caption h1,
-    .carousel-caption .lead {
-      margin: 0;
-      line-height: 1.25;
-      color: #fff;
-      text-shadow: 0 1px 1px rgba(0,0,0,.4);
-    }
-    .carousel-caption .btn {
-      margin-top: 10px;
-    }
-
-
-
-    /* MARKETING CONTENT
-    -------------------------------------------------- */
-
-    /* Center align the text within the three columns below the carousel */
-    .marketing .span4 {
-      text-align: center;
-    }
-    .marketing h2 {
-      font-weight: normal;
-    }
-    .marketing .span4 p {
-      margin-left: 10px;
-      margin-right: 10px;
-    }
-
-
-    /* Featurettes
-    ------------------------- */
-
-    .featurette-divider {
-      margin: 80px 0; /* Space out the Bootstrap <hr> more */
-    }
-    .featurette {
-      padding-top: 120px; /* Vertically center images part 1: add padding above and below text. */
-      overflow: hidden; /* Vertically center images part 2: clear their floats. */
-    }
-    .featurette-image {
-      margin-top: -120px; /* Vertically center images part 3: negative margin up the image the same amount of the padding to center it. */
-    }
-
-    /* Give some space on the sides of the floated elements so text doesn't run right into it. */
-    .featurette-image.pull-left {
-      margin-right: 40px;
-    }
-    .featurette-image.pull-right {
-      margin-left: 40px;
-    }
-
-    /* Thin out the marketing headings */
-    .featurette-heading {
-      font-size: 50px;
-      font-weight: 300;
-      line-height: 1;
-      letter-spacing: -1px;
-    }
-
-
-
-    /* RESPONSIVE CSS
-    -------------------------------------------------- */
-
-    @media (max-width: 979px) {
-
-      .container.navbar-wrapper {
-        margin-bottom: 0;
-        width: auto;
-      }
-      .navbar-inner {
-        border-radius: 0;
-        margin: -20px 0;
+    <link href="{{STATIC_URL}}css/bootstrap.css" rel="stylesheet">
+    <link href="{{STATIC_URL}}css/bootstrap-responsive.css" rel="stylesheet">
+    <style type="text/css">
+      body {
+        padding-top: 20px;
+        padding-bottom: 40px;
       }
 
-      .carousel .item {
-        height: 500px;
+      /* Custom container */
+      .container-narrow {
+        margin: 0 auto;
+        max-width: 700px;
       }
-      .carousel img {
-        width: auto;
-        height: 500px;
-      }
-
-      .featurette {
-        height: auto;
-        padding: 0;
-      }
-      .featurette-image.pull-left,
-      .featurette-image.pull-right {
-        display: block;
-        float: none;
-        max-width: 40%;
-        margin: 0 auto 20px;
-      }
-    }
-
-
-    @media (max-width: 767px) {
-
-      .navbar-inner {
-        margin: -20px;
+      .container-narrow > hr {
+        margin: 30px 0;
       }
 
-      .carousel {
-        margin-left: -20px;
-        margin-right: -20px;
+      /* Main marketing message and sign up button */
+      .jumbotron {
+        margin: 60px 0;
+        text-align: center;
       }
-      .carousel .container {
-
+      .jumbotron h1 {
+        font-size: 72px;
+        line-height: 1;
       }
-      .carousel .item {
-        height: 300px;
-      }
-      .carousel img {
-        height: 300px;
-      }
-      .carousel-caption {
-        width: 65%;
-        padding: 0 70px;
-        margin-top: 100px;
-      }
-      .carousel-caption h1 {
-        font-size: 30px;
-      }
-      .carousel-caption .lead,
-      .carousel-caption .btn {
-        font-size: 18px;
+      .jumbotron .btn {
+        font-size: 21px;
+        padding: 14px 24px;
       }
 
-      .marketing .span4 + .span4 {
-        margin-top: 40px;
+      /* Supporting marketing content */
+      .marketing {
+        margin: 60px 0;
       }
-
-      .featurette-heading {
-        font-size: 30px;
+      .marketing p + h4 {
+        margin-top: 28px;
       }
-      .featurette .lead {
-        font-size: 18px;
-        line-height: 1.5;
-      }
-
-    }
     </style>
+
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -262,89 +57,52 @@
     <![endif]-->
 
     <!-- Fav and touch icons -->
-   <link rel="shortcut icon" href="{{MEDIA_URL}}images/registro_menu.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
+                    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
+                                   <link rel="shortcut icon" href="../assets/ico/favicon.png">
+                                    <link rel="shortcut icon" href="{{MEDIA_URL}}images/registro_menu.png">
   </head>
 
   <body>
 
+    <div class="container-narrow">
 
-
-    <!-- NAVBAR
-    ================================================== -->
-    <div class="navbar-wrapper">
-      <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
-      <div class="container">
-          <img src="{{MEDIA_URL}}images/panel.png" alt="">
-        <div class="navbar navbar-inverse">
-          <div class="navbar-inner">
-            <!-- Responsive Navbar Part 1: Button for triggering responsive navbar (not covered in tutorial). Include responsive CSS to utilize. -->
-            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="brand" href="#">Hub Médico</a>
-            <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
-            <div class="nav-collapse collapse">
-              <ul class="nav">
-                <li><a href="/cuentas/register/" target="_blank">Regístrese</a></li>
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Entrar <b class="caret"></b></a>
-                 <ul class="dropdown-menu">
-                 <li><a href="/cuentas/login/" target="blank">Médicos</a></li>
-                    <li><a href="/pacientes/" target="blank">Pacientes</a></li>
-                 </ul>
-                 </li>
-                 <li><a href="/cuentas/blog/">Blog</a></li>
-           
-                <!-- Read about Bootstrap dropdowns at http://twbs.github.com/bootstrap/javascript.html#dropdowns -->
-             
-              </ul>
-            </div><!--/.nav-collapse -->
-          </div><!-- /.navbar-inner -->
-        </div><!-- /.navbar -->
-
-      </div> <!-- /.container -->
-    </div><!-- /.navbar-wrapper -->
-
-
-    <div class="container marketing">
-
-      <!-- Three columns of text below the carousel -->
-      <div class="row">
-       {% block content %}
-         
-       {% endblock content %}
-      </div><!-- /.row -->
-
-
-      <!-- START THE FEATURETTES -->
-
-      <hr class="featurette-divider">
-
-      <div class="featurette">
-       
+      <div class="masthead">
+      <a href="/"> <img src="{{MEDIA_URL}}images/hubsalud.png" alt=""></a>
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a href="#">Blog</a></li>
+          <li><a href="#">Quienes somos</a></li>
+          <li><a href="#">Contactar</a></li>
+             <li><a href="#">ayuda</a></li>
+        </ul>
       </div>
-
-      <hr class="featurette-divider">
+      <div class="jumbotron">
+    
+        <p {% block content %}
+            
+        {% endblock content %} </p>
+        <hr class="featurette-divider">
+         <p class="pull-left">&copy; Powered by Digitalsmark Latinoamérica | Copyright © 2002 - 2014 &middot; <a href="#">Privacidad</a> &middot; <a href="#">Terminos de uso</a></p><p class="pull-left"> <a href="#" target="_blank"><i></i> YouTube </a> &middot; <a href="#" target="_blank"><i></i> Linkedin </a> &middot; <a href="#" target="_blank"><i></i> Facebook </a> &middot; <a href="#" target="_blank"><i></i> Twitter </a> &middot; <a href="/admin/" target="_blank"><i></i> Admin </a></p>
+      
+      </div>
+       
 
       <!-- /END THE FEATURETTES -->
 
 
       <!-- FOOTER -->
-      <footer>
-        <p class="pull-right"><a href="#" target="_blank"><i class="icon-play icon-large"></i> YouTube </a> &middot; <a href="#" target="_blank"><i class="icon-linkedin icon-large"></i> Linkedin </a> &middot; <a href="#" target="_blank"><i class="icon-facebook icon-large"></i> Facebook </a> &middot; <a href="#" target="_blank"><i class="icon-twitter icon-large"></i>  Twitter </a> &middot; <a href="/admin/" target="_blank"><i class="icon-fullscreen icon-large"></i> Admin </a></p>
-        <p>&copy; Powered by Digitalsmark Latinoamérica | Copyright © 2002 - 2014 &middot; <a href="#">Privacidad</a> &middot; <a href="#">Terminos de uso</a></p>
-        <p></p>
-      </footer>
-
-    </div><!-- /.container -->
-
-
+     
+      
+         
+      
+    </div> <!-- /container -->
 
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://getbootstrap.com/2.3.2/assets/js/jquery.js"></script>
+     <script src="{{STATIC_URL}}js/jquery.js"></script>
     <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-transition.js"></script>
     <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-alert.js"></script>
     <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-modal.js"></script>
@@ -357,14 +115,6 @@
     <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-collapse.js"></script>
     <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-carousel.js"></script>
     <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-typeahead.js"></script>
-    <script>
-      !function ($) {
-        $(function(){
-          // carousel demo
-          $('#myCarousel').carousel()
-        })
-      }(window.jQuery)
-    </script>
-    <script src="http://getbootstrap.com/2.3.2/assets/js/holder/holder.js"></script>
+
   </body>
 </html>
