--- a/templates/registro/login.html
+++ b/templates/registro/login.html
@@ -1,26 +1,23 @@
-{% load i18n staticfiles %}<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="es" lang="es">
-    <head>
-        <title>{% trans "Sign in" %}</title>
-        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/bootstrap-theme.min.css">
-        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/base.css" />
-    </head>
-    <body>
+{% extends "base.html" %}
+
+{% block title %}
+Login
+{% endblock %}
+
+{% block content %}
 
         <div class="container">
             <form method="post" action="." class="form-signin" role="form">{% csrf_token %}
-                <h2 class="form-signin-heading">{% trans "Sign in" %}</h2>
+                <h2 class="form-signin-heading"></h2>
                 {% if form.errors %}
-                    <div class="alert alert-danger">{% trans "User or password don't match." %}</div>
+                    <div class="alert alert-danger">El Usuario y/o la contraseña no coincide</div>
                 {% endif %}
 
                 {% for field in form %}
-                    {{ field }}
+                    <p>{{ field }}</p>
                 {% endfor %}
-                    
-                <button class="btn btn-lg btn-primary btn-block" type="submit">{% trans "Sign in" %}</button>
-               <br>{% trans "Don't have an account?" %} <a href="/registrarse/">{% trans "Sign up here" %}</a>
+                <button class="btn btn-default btn-block" type="submit">Entrar</button>
+               <br>Aún no tienes tu cuenta? <a href="/registrarse/">Regístrate Gratis</a>
             </form>
         </div>
 
@@ -29,3 +26,4 @@
 
     </body>
 </html>
+{% endblock %}
