--- a/templates/registro/register.html
+++ b/templates/registro/register.html
@@ -1,26 +1,23 @@
-{% load i18n staticfiles %}<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="{{LANGUAGE_CODE}}" lang="{{LANGUAGE_CODE}}">
-    <head>
-        <title>{% trans "Sign up" %}</title>
-        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/bootstrap-theme.min.css">
-        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/base.css" />
-    </head>
-    <body>
+{% extends "base.html" %}
+
+{% block title %}
+Registro
+{% endblock %}
+
+{% block content %}
 
         <div class="container">
             <form method="post" action="." class="form-register" role="form">{% csrf_token %}
-                <h2 class="form-register-heading">{% trans "Sign up" %}</h2>
+                <h2 class="form-register-heading"></h2>
                     {% if form.errors %}
-                        <div class="alert alert-danger">{% trans "Check the red fields." %}</div>  
+                        <div class="alert alert-danger">Revisa los campos en rojo</div>  
                     {% endif %}
 
                     {% for field in form %}
-                        {{ field }}
+                        <p>{{ field }}</p>
                     {% endfor %}
-                    
-                <button class="btn btn-lg btn-primary btn-block" type="submit">{% trans "Create an account" %}</button>
-                <br>{% trans "Do you have an account?" %} <a href="/login/">{% trans "Sign in here" %}</a>
+                <button class="btn btn-default btn-block" type="submit">Crear una cuenta</button>
+                <br>Ya tienes una cuenta? <a href="/login/">Inicia sesión aquí</a>
             </form>
         </div>
 
@@ -29,3 +26,4 @@
 
     </body>
 </html>
+{% endblock %}
