--- a/templates/registro/success.html
+++ b/templates/registro/success.html
@@ -1,156 +1,19 @@
-{% load i18n staticfiles %}<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="{{LANGUAGE_CODE}}" lang="{{LANGUAGE_CODE}}">
-  <head>
-    <meta charset="utf-8">
-    <title>Registro</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+{% extends "base.html" %}
 
-    <!-- Le styles -->
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/base.css" />
-    <style type="text/css">
-      body {
-        padding-top: 20px;
-        padding-bottom: 60px;
-      }
+{% block title %}
+Registro
+{% endblock %}
 
-      /* Custom container */
-      .container {
-        margin: 0 auto;
-        max-width: 1000px;
-      }
-      .container > hr {
-        margin: 60px 0;
-      }
-
-      /* Main marketing message and sign up button */
-      .jumbotron {
-        margin: 80px 0;
-        text-align: center;
-      }
-      .jumbotron h1 {
-        font-size: 100px;
-        line-height: 1;
-      }
-      .jumbotron .lead {
-        font-size: 24px;
-        line-height: 1.25;
-      }
-      .jumbotron .btn {
-        font-size: 21px;
-        padding: 14px 24px;
-      }
-
-      /* Supporting marketing content */
-      .marketing {
-        margin: 60px 0;
-      }
-      .marketing p + h4 {
-        margin-top: 28px;
-      }
-
-
-      /* Customize the navbar links to be fill the entire space of the .navbar */
-      .navbar .navbar-inner {
-        padding: 0;
-      }
-      .navbar .nav {
-        margin: 0;
-        display: table;
-        width: 100%;
-      }
-      .navbar .nav li {
-        display: table-cell;
-        width: 1%;
-        float: none;
-      }
-      .navbar .nav li a {
-        font-weight: bold;
-        text-align: center;
-        border-left: 1px solid rgba(255,255,255,.75);
-        border-right: 1px solid rgba(0,0,0,.1);
-      }
-      .navbar .nav li:first-child a {
-        border-left: 0;
-        border-radius: 3px 0 0 3px;
-      }
-      .navbar .nav li:last-child a {
-        border-right: 0;
-        border-radius: 0 3px 3px 0;
-      }
-    </style>
-    <link href="{{STATIC_URL}}css/bootstrap-responsive.css" rel="stylesheet">
-
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="../assets/js/html5shiv.js"></script>
-    <![endif]-->
-
-    <!-- Fav and touch icons -->
-      <link rel="shortcut icon" href="http://www.techmobilesoft.com/hubmedico/images/registro_menu.png">
-  </head>
-
-  <body>
-
-    <div class="container">
-<img src="http://www.techmobilesoft.com/hubmedico/images/panel.png" alt="">
-      <div class="masthead">
-        <div class="navbar">
-          <div class="navbar-inner">
-            <div class="container">
-            </div>
-          </div>
-        </div><!-- /.navbar -->
-      </div>
+{% block content %}
 
       <!-- Jumbotron -->
       <div class="jumbotron">
-        <img src="{{MEDIA_URL}}images/logo_registro.png" alt="">
         <h2>¡Bienvenido!</h2>
-        <p class="lead">Para hacer uso de los servicios que ofrece nuestra plataforma, debes ingresar a la cuenta de tu correo y confirmar el registro a través del email que te hemos enviado.
-       <div class="container">
-            <h4>¡Gracias por registrarte!</span></h4>
-         <a href="/login/">ENTRAR</a> 
-            
-        </div>
+        <p class="lead">Para hacer uso de los servicios que ofrece nuestra plataforma, debes ingresar a la cuenta de tu correo y confirmar el registro a través del email que te hemos enviado.</p>
+         <h4>¡Gracias por registrarte!</span></h4>
+         <a href="/login/">ENTRAR</a>
       </div>
 
       <hr>
 
-      <!-- Example row of columns -->
-
-      <hr>
-
-      <footer>
-        <p class="pull-right"><a href="#" target="_blank"><i class="icon-play icon-large"></i> YouTube </a> &middot; <a href="#" target="_blank"><i class="icon-linkedin icon-large"></i> Linkedin </a> &middot; <a href="#" target="_blank"><i class="icon-facebook icon-large"></i> Facebook </a> &middot; <a href="#" target="_blank"><i class="icon-twitter icon-large"></i>  Twitter </a> &middot; <a href="/admin/" target="_blank"><i class="icon-fullscreen icon-large"></i> Admin </a></p>
-        <p>&copy; Powered by Digitalsmark Latinoamérica | Copyright © 2002 - 2014 &middot; <a href="#">Privacidad</a> &middot; <a href="#">Terminos de uso</a></p>
-        <p></p>
-      </footer>
-
-    </div> <!-- /container -->
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{STATIC_URL}}js/jquery.min.js"></script>
-    <script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
-    <script src="http://getbootstrap.com/2.3.2/assets/js/jquery.js"></script>
-    <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-transition.js"></script>
-    <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-alert.js"></script>
-    <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-modal.js"></script>
-    <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-dropdown.js"></script>
-    <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-scrollspy.js"></script>
-    <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-tab.js"></script>
-    <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-tooltip.js"></script>
-    <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-popover.js"></script>
-    <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-button.js"></script>
-    <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-collapse.js"></script>
-    <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-carousel.js"></script>
-    <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap-typeahead.js"></script>
-
-  </body>
-</html>
+    {% endblock %}
