--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
     <div class="container-narrow">
 
       <div class="masthead">
-      <a href="/"> <img src="{{MEDIA_URL}}images/hubsalud.png" alt=""></a>
+      <a href="/"> <img src="{{MEDIA_URL}}images/LogoHubSaludDefinitivo_v2.jpg" alt=""></a>
         <ul class="nav nav-pills pull-right">
           <li class="active"><a href="#">Blog</a></li>
           <li><a href="#">Quienes somos</a></li>
