--- a/templates/inicio/index.html
+++ b/templates/inicio/index.html
@@ -743,7 +743,7 @@ color:#ffa902;
 							<span class="icon-bar"></span>
 						</button>
 						<a class="navbar-brand" href="http://demo.qkthemes.com/medicine" title="Marble">
-													<img src="{{MEDIA_URL}}images/LogoHubSaludDefinitivo.png" alt="Marble">
+													<img src="{{MEDIA_URL}}images/LogoHome.png" alt="Marble">
 												</a>
 					</div>
 					<div class="navbar-collapse collapse">
@@ -1602,7 +1602,7 @@ color:#ffa902;
 							<aside id="text-3" class="widget widget_text"><h1>Quienes somos</h1>			<div class="textwidget"><div class=" footer-widget text-widget">
 <p>Hub Salud es una plataforma web, desarrollado por la start-up Tech Mobile Software S.A.S </p>
 <p>Tecnología al servicio de la salud </p>
-<img src="{{MEDIA_URL}}images/LogoHubSaludDefinitivo_v2.jpg" alt="">
+<img src="{{MEDIA_URL}}images/LogoTransparencia.png" alt="">
 </div></div>
 		</aside>						</div>
 
