--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -23,6 +23,10 @@
 	<link rel="stylesheet" href="http://pixeldizajn.com/PerfectCV/css/lightbox.css">
 	<link rel="stylesheet" href="{{STATIC_URL}}/css/styles.css">
 
+	<script type="text/javascript" src="{{STATIC_URL}}js/jquery.min.js"></script>
+	<script type="text/javascript" src="{{STATIC_URL}}js/bootstrap.min.js"></script>
+	<script src="{{STATIC_URL}}js/jquery/jquery-1.8.2.min.js" type="text/javascript" ></script>
+
 </head>
 
 <body>
@@ -38,7 +42,7 @@
 				<li><a href="#experience">Experiencia Profesional</a></li>
 				<li><a href="#education">Estudios</a></li>
         <li><a href="#blog">Blog</a></li>
-        <li><a href="#my_expertise">P & R</a></li>
+        <li><a href="#">P & R</a></li>
         <li><a href="#contact">Contacto</a></li>
 
 
@@ -188,50 +192,22 @@
 			</section> <!-- /portfolio -->
 			<!-- end PORTFOLIO -->
 <!-- MY EXPERTISE -->
-<section class="row-fluid my_expertise" id="my_expertise">
-  <aside class="span3 aside_el">
-    <h2>My Expertise</h2>
-    <h5>skills that I’m<br /> proud of</h5>
-  </aside>
-  <article class="span4 borderleft par_el">
-    <p>Fringilla justo ullamcorper ac. Class aptent taciti sociosqu ad litora torque per conubia nostra, per inceptos himenaeos magna puella molto est.</p>
-    <p>Raesent sem elit, volutpat id vulputate faucibus, fringilla vel mass. Proin nec mi a mi tincidunt elementu sed vel ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    <p>I love doing what I do.</p>
-  </article>
-  <div class="span5 skill_level">
-    <h4>UX Design</h4>
-    <div class="progressbar percent_70">
-      <div class="progressbar-inner"></div>
-    </div>
-    <h4>HTML5 with CSS3</h4>
-    <div class="progressbar percent_100">
-      <div class="progressbar-inner"></div>
-    </div>
-    <h4>PHP&amp;MySQL </h4>
-    <div class="progressbar percent_30">
-      <div class="progressbar-inner"></div>
-    </div>
-    <h4>Javascript</h4>
-    <div class="progressbar percent_90">
-      <div class="progressbar-inner"></div>
-    </div>
-  </div> <!-- /skill_level -->
-</section> <!-- /my_expertise -->
+
 <!-- end MY EXPERTISE -->
 		</div> <!-- /page -->
 		<footer class="row-fluid siteFooter">
 			<div id="contact">
 				<aside class="span3 aside_el">
-					<h2>Contact us</h2>
-					<h5>we reply in less<br /> than 24 hours</h5>
+					<h2>Contacto</h2>
+
 				</aside>
 				<div class="span9 borderleft">
 					<form class="comment_form" data-validate="parsley">
 						<fieldset>
-							<input type="text" id="form_name" data-required="true" data-trigger="focusin focusout" placeholder="Name">
-							<input type="text" id="form_email" data-required="true" data-trigger="focusin focusout" data-type="email" placeholder="Email Address">
-							<textarea rows="8" id="form_message" data-required="true" data-trigger="focusin focusout" placeholder="Message"></textarea>
-							<div class="send-button pull-right"> <a>SEND THE MESSAGE </a> </div>
+							<input type="text" id="form_name" data-required="true" data-trigger="focusin focusout" placeholder="Nombre">
+							<input type="text" id="form_email" data-required="true" data-trigger="focusin focusout" data-type="email" placeholder="Correo">
+							<textarea rows="8" id="form_message" data-required="true" data-trigger="focusin focusout" placeholder="Mensaje"></textarea>
+							<div class="send-button pull-right"> <a>ENVIAR </a> </div>
 						</fieldset>
 					</form>
 				</div>
@@ -363,5 +339,23 @@
 	});
 
 	</script>
+
+					<script src="{{STATIC_URL}}js/bootstrap/bootstrap-transition.js" type="text/javascript" ></script>
+					<script src="{{STATIC_URL}}js/bootstrap/bootstrap-alert.js" type="text/javascript" ></script>
+					<script src="{{STATIC_URL}}js/bootstrap/bootstrap-modal.js" type="text/javascript" ></script>
+					<script src="{{STATIC_URL}}js/bootstrap/bootstrap-dropdown.js" type="text/javascript" ></script>
+					<script src="{{STATIC_URL}}js/bootstrap/bootstrap-scrollspy.js" type="text/javascript" ></script>
+					<script src="{{STATIC_URL}}js/bootstrap/bootstrap-tab.js" type="text/javascript" ></script>
+					<script src="{{STATIC_URL}}js/bootstrap/bootstrap-tooltip.js" type="text/javascript" ></script>
+					<script src="{{STATIC_URL}}js/bootstrap/bootstrap-popover.js" type="text/javascript" ></script>
+					<script src="{{STATIC_URL}}js/bootstrap/bootstrap-button.js" type="text/javascript" ></script>
+					<script src="{{STATIC_URL}}js/bootstrap/bootstrap-collapse.js" type="text/javascript" ></script>
+					<script src="{{STATIC_URL}}js/bootstrap/bootstrap-carousel.js" type="text/javascript" ></script>
+					<script src="{{STATIC_URL}}js/bootstrap/bootstrap-typeahead.js" type="text/javascript" ></script>
+					<script src="{{STATIC_URL}}js/bootstrap/bootstrap-affix.js" type="text/javascript" ></script>
+					<script src="{{STATIC_URL}}js/bootstrap/bootstrap-datepicker.js" type="text/javascript" ></script>
+					<script src="{{STATIC_URL}}js/jquery/jquery-tablesorter.js" type="text/javascript" ></script>
+					<script src="{{STATIC_URL}}js/jquery/jquery-chosen.js" type="text/javascript" ></script>
+					<script src="{{STATIC_URL}}js/jquery/virtual-tour.js" type="text/javascript" ></script>
 </body>
 </html>
