--- a/templates/inicio/board.html
+++ b/templates/inicio/board.html
@@ -69,7 +69,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="/home/pacientes/">
                                         <i class="icon-book icon-large"></i> Pacientes
                                     </a>
                                 </li>
@@ -88,21 +88,6 @@
                                         <i class="icon-list icon-large"></i> Actividad
                                     </a>
                                 </li>
-                                <li>
-                                   <a href="#">
-                                       <i class="icon-pencil icon-large"></i> P & R
-                                   </a>
-                               </li>
-                               <li>
-                                  <a href="/blog/">
-                                      <i class="icon-tags icon-large"></i> Blog
-                                  </a>
-                              </li>
-                              <li>
-                                 <a href="/tarjeta/">
-                                     <i class="icon-bar-chart icon-large"></i> Tarjeta
-                                 </a>
-                             </li>
                             </ul>
                         </div>
                     </div>
@@ -157,6 +142,5 @@
             $(".chosen").chosen();
         });
     </script>
-
 	</body>
 </html>
