--- a/templates/inicio/perfil.html
+++ b/templates/inicio/perfil.html
@@ -14,7 +14,7 @@ Perfil - Personal
             </div>
             <div class="box-header">
                 <i class="icon-bookmark"></i>
-                <h5>Actualiza Tu Perfil</h5>
+                <h5>Tu Perfil</h5>
             </div>
             <div class="box-content">
                 <div class="btn-group-box">
@@ -24,6 +24,40 @@ Perfil - Personal
                     <a href="/home/profesional/"><button class="btn"><i class="icon-tasks icon-large"></i><br>Profesional</button></a>
                     <a href="/home/social"><button class="btn"><i class="icon-comments icon-large"></i><br>Social</button></a>
 
+                </div>
+            </div>
+        </div>
+        <div class="box">
+
+            <div class="box-header">
+                <i class="icon-bookmark"></i>
+                <h5>Tus Aplicaciones</h5>
+            </div>
+            <div class="box-content">
+                <div class="btn-group-box">
+                    <a href="/home/"><button class="btn"><i class="icon-pencil icon-large"></i><br>P & R</button></a>
+                    <a href="/home/contacto"><button class="btn"><i class="icon-tags icon-large"></i><br>Blog</button></a>
+                </div>
+            </div>
+        </div>
+        <div class="box">
+
+            <div class="box-header">
+                <i class="icon-bookmark"></i>
+                <h5>Tus Clubes</h5>
+            </div>
+            <div class="box-content">
+                <div class="btn-group-box">
+                    <ul class="nav nav-pills nav-stacked">
+                        <li class="active"><a href="#">Diabetes</a></li>
+                        <li><a href="#">Hipertensión</a></li>
+                        <li><a href="#">Riesgo Cardiovascular</a></li>
+                        <li><a href="#">Insuficiencia Renal</a></li>
+                        <li><a href="#">Cancer</a></li>
+                        <li><a href="#">Artritis</a></li>
+                        <li><a href="#">Climaterio & Menopausia</a></li>
+                        <li><a href="#">Pediatría</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
