--- a/templates/inicio/index.html
+++ b/templates/inicio/index.html
@@ -743,7 +743,7 @@ color:#ffa902;
 							<span class="icon-bar"></span>
 						</button>
 						<a class="navbar-brand" href="/" title="Marble">
-													<img src="{{MEDIA_URL}}/images/LogoHome.png" alt="Marble">
+						  <img src="{{MEDIA_URL}}/images/logoHome.png" alt="Marble">
 												</a>
 					</div>
 					<div class="navbar-collapse collapse">
@@ -963,7 +963,7 @@ color:#ffa902;
 			data-endelementdelay="0.1"
 			data-endspeed="400"
 			data-endeasing="Back.easeIn"
-			style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">Acceda a información exclusiva y personalizada desde nuestra plataforma virtual de educación y actualidad en salud.
+			style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">Acceda a información exclusiva y personalizada desde nuestra plataforma virtual.
 		</div>
 
 		<!-- LAYER NR. 3 -->
@@ -991,7 +991,7 @@ color:#ffa902;
 
 		<!-- LAYER NR. 1 -->
 		<div class="tp-caption large_bold_white skewfromleftshort tp-resizeme"
-			data-x="350"
+			data-x="170"
 			data-y="274"
 			data-speed="500"
 			data-start="1200"
@@ -1019,7 +1019,7 @@ color:#ffa902;
 			data-endelementdelay="0.1"
 			data-endspeed="400"
 			data-endeasing="Back.easeIn"
-			style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">Encuentra respuesta a las dudas y preguntas sobre tu salud, y obtén una comunicación directa y rápida con tu médico.
+			style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">Encuentra respuesta a las dudas y preguntas sobre tu salud, <br> y obtén una comunicación directa y rápida con tu médico.
 		</div>
 
 		<!-- LAYER NR. 3 -->
@@ -1600,7 +1600,7 @@ color:#ffa902;
 						<div class="col-md-3 triggerAnimation animated" data-animate="fadeInLeft">
 
 							<aside id="text-3" class="widget widget_text"><h1>Quienes somos</h1>			<div class="textwidget"><div class=" footer-widget text-widget">
-<p>Hub Salud es una plataforma web, desarrollado por la start-up Tech Mobile Software S.A.S </p>
+<p>Hub Salud es una plataforma web, desarrollada por la Start-Up Tech Mobile Software </p>
 <p>Tecnología al servicio de la salud </p>
 <img src="{{MEDIA_URL}}images/LogoTransparencia.png" alt="">
 </div></div>
