Actualizacion 28 de Agosto

--- a/templates/perfil/index.html
+++ b/templates/perfil/index.html
@@ -112,8 +112,7 @@
 
                                             <div class="image-holder one" id="pic_prof_1">
 
-                                                <img class="head-image up circle" src="{{MEDIA_URL}}images/picjuan.jpg" width="150" height="150" alt="" />
-                                               
+                                                <img class="head-image up circle" src="{{MEDIA_URL}}{{usr.imagen}}" width="150" height="150" alt="" />
 
                                             </div>
                                         </div>
