--- a/templates/inicio/perfil.html
+++ b/templates/inicio/perfil.html
@@ -76,7 +76,7 @@ Perfil - Personal
               <div id="collapseOne" class="panel-collapse collapse in">
                 <div class="panel-body">
 
-             <form class="form-horizontal" method="POST">{% csrf_token %}
+             <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
               {{ form.as_p }}
                  <input type="submit" value="Actualizar" class="btn btn-primary">
               </form>
