--- a/templates/inicio/consultas.html
+++ b/templates/inicio/consultas.html
@@ -1,7 +1,7 @@
 {% extends "inicio/board.html" %}
 
 {% block title %}
-Perfil - Personal
+Aplicaciones - Consultas
 {% endblock %}
 
 {% block content %}
@@ -19,7 +19,7 @@ Perfil - Personal
             <div class="box-content">
                 <div class="btn-group-box">
                     <a href="/home/"><button class="btn"><i class="icon-user icon-large"></i><br>Personales</button></a>
-                    <a href=/home/contacto><button class="btn"><i class="icon-users icon-large"></i><br>Contacto</button></a>
+                    <a href="/home/contacto"><button class="btn"><i class="icon-users icon-large"></i><br>Contacto</button></a>
                     <a href="/home/academico"><button class="btn"><i class="icon-book icon-large"></i><br>Académico</button></a>
                     <a href="/home/profesional/"><button class="btn"><i class="icon-tasks icon-large"></i><br>Profesional</button></a>
                     <a href="/home/social"><button class="btn"><i class="icon-comments icon-large"></i><br>Social</button></a>
@@ -35,8 +35,8 @@ Perfil - Personal
             </div>
             <div class="box-content">
                 <div class="btn-group-box">
-                    <a href=/home/consultas/><button class="btn"><i class="icon-pencil icon-large"></i><br>Preguntas</button></a>
-                    <a href="/home/contacto"><button class="btn"><i class="icon-tags icon-large"></i><br>Blog</button></a>
+                    <a href=/home/consultas /><button class="btn"><i class="icon-pencil icon-large"></i><br>Preguntas</button></a>
+                    <a href=/home/contacto><button class="btn"><i class="icon-tags icon-large"></i><br>Blog</button></a>
                 </div>
             </div>
         </div>
@@ -68,7 +68,7 @@ Perfil - Personal
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <legend class="lead">
-                        Tus Datos Personales
+                        Preguntas
                     </legend>
                 </h4>
               </div>
