--- a/templates/inicio/contacto.html
+++ b/templates/inicio/contacto.html
@@ -35,7 +35,7 @@ Perfil - Personal
             </div>
             <div class="box-content">
                 <div class="btn-group-box">
-                    <a href="/home/"><button class="btn"><i class="icon-pencil icon-large"></i><br>P & R</button></a>
+                    <a href=/home/consultas><button class="btn"><i class="icon-pencil icon-large"></i><br>Preguntas</button></a>
                     <a href="/home/contacto"><button class="btn"><i class="icon-tags icon-large"></i><br>Blog</button></a>
                 </div>
             </div>
