--- a/templates/inicio/academico.html
+++ b/templates/inicio/academico.html
@@ -36,7 +36,8 @@ Perfil - Personal
           <div class="box-content">
               <div class="btn-group-box">
                   <a href=/home/consultas><button class="btn"><i class="icon-pencil icon-large"></i><br>Preguntas</button></a>
-                  <a href="/home/contacto"><button class="btn"><i class="icon-tags icon-large"></i><br>Blog</button></a>
+                   <a href="/blog/" target="_blank"><button class="btn"><i class="icon-tags icon-large"></i><br>Blog</button></a>
+                  <a href="#"><button class="btn"><i class="icon-tags icon-large"></i><br>Servicios</button></a>
               </div>
           </div>
       </div>
